# knowledge-mcp

./: .eslintrc.json  .gitignore  .npmignore  .npmrc  .pnpmrc  CLAUDE.md  INSTRUCTIONS.md  LICENSE  README.md  check_code_quality.py  example-home-CLAUDE.md  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  setup.sh  test_server.sh  tsconfig.json
TODO/: .gitkeep  001-KnowledgeMCPImplementation.md  002-ComprehensiveUnitTests.md  003-CodeQualityAndSecurityImprovements.md  007-GitPullStartupAndDocumentation.md
docs/: MCP_CLIENT_INSTRUCTION_GUIDE.md  README.md  compass_artifact_wf-d4a70b9a-916d-4d33-833f-4f3856a0d70e_text_markdown.md  documentation-update-summary.md  error-handling-guide.md  mcp-interface-test-plan.md  mcp-security-guidelines.md  migration-guide.md  publishing-guidelines.md  quick-reference.md  technical-specification.md  typescript-implementation.md  typescript-testing-guide.md
src/knowledge-mcp/: documents.ts  index.ts  projectId.ts  server-old.ts  server.ts  utils.ts
src/knowledge-mcp/config/: index.ts  toolDescriptions.ts
src/knowledge-mcp/errors/: MCPError.ts  index.ts
src/knowledge-mcp/handlers/: BaseHandler.ts  ChapterToolHandler.ts  KnowledgeToolHandler.ts  ProjectToolHandler.ts  ResourceHandler.ts  SearchToolHandler.ts  ServerToolHandler.ts  TodoToolHandler.ts
src/knowledge-mcp/schemas/: validation.ts
src/knowledge-mcp/utils/: retry.ts  tracing.ts
src/knowledge_mcp/: __init__.py  __main__.py  documents.py  project_id.py  server.py  utils.py
test/: .eslintrc.json  comprehensive-tests.ts  interface-test.ts  run-all-tests.ts  todo-test.ts
test/data/: sample-knowledge-1.md  sample-knowledge-2.md  sample-project-main.md
test/suites/: 01-project-main.test.ts  02-project-sections.test.ts  03-knowledge-files.test.ts  04-chapters.test.ts  05-search.test.ts  06-resources.test.ts  07-server-management.test.ts  08-todo.test.ts  09-error-handling.test.ts  10-edge-cases.test.ts  11-abstraction-boundary.test.ts
test/utils/: test-client.ts  test-data-loader.ts  test-helpers.ts
tests/: __init__.py  test_documents.py  test_project_id.py  test_server.py  test_utils.py
